build: urgh (#92)